--- a/system_engineering_v15.ipynb
+++ b/system_engineering_v15.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/system_engineering_v15.ipynb",
-      "authorship_tag": "ABX9TyPAtv+VStZcGt7Zlxkx3cTE",
+      "authorship_tag": "ABX9TyOAIvASX3UUM8f/MNAGSkoa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -382,10 +382,10 @@
       ],
       "metadata": {
         "id": "cp9iCXKFtO2c",
-        "outputId": "4e3a7153-f2fb-4f1c-88b6-4bdf122c9e98",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4e3a7153-f2fb-4f1c-88b6-4bdf122c9e98"
       },
       "execution_count": 1,
       "outputs": [
@@ -539,10 +539,10 @@
       ],
       "metadata": {
         "id": "KzAEXcnqge2K",
-        "outputId": "b6e01f3a-166a-4850-d837-ff406bdb83aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b6e01f3a-166a-4850-d837-ff406bdb83aa"
       },
       "execution_count": 3,
       "outputs": [
@@ -711,10 +711,10 @@
       ],
       "metadata": {
         "id": "xTFQ81pdtOwO",
-        "outputId": "1c948f19-036c-42bc-d57b-f8e91d584974",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1c948f19-036c-42bc-d57b-f8e91d584974"
       },
       "execution_count": 4,
       "outputs": [
@@ -1685,7 +1685,7 @@
         "    #        break  # Döngüden çık ve devam et\n",
         "\n",
         "    # Kullanıcı mesajını sohbet geçmişine ekle\n",
-        "    chat_history.append({\"role\": \"user\", \"content\": prompt})\n",
+        "    #chat_history.append({\"role\": \"user\", \"content\": prompt})\n",
         "\n",
         "    # Optimize edilmiş promptu oluştur\n",
         "    optimized_prompt = generate_prompt_engineering(prompt, tokenizer, model)\n",
@@ -1757,67 +1757,10 @@
         "    main()"
       ],
       "metadata": {
-        "id": "ACv14X5D_hgl",
-        "outputId": "2a0d9049-a087-4ff7-8675-417b10ff70cd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ACv14X5D_hgl"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mesajınızı Giriniz: kalite yönetimi hakkında bilgi verir misin?\n",
-            "\n",
-            "==================================================\n",
-            "OPTİMİZE EDİLMİŞ PROMPT:\n",
-            "==================================================\n",
-            "### Improved Prompt:\n",
-            "What are the steps of quality management processes?\n",
-            "\n",
-            "#### Steps:\n",
-            "1. Defining Quality Goals,\n",
-            "2. Creating Processes and Systems,\n",
-            "3. Monitoring Performance Continuously,\n",
-            "4. Correcting Problems When Necessary,\n",
-            "\n",
-            "This structure provides a comprehensive understanding of the steps involved in quality management processes, making it easier to follow and implement them correctly.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n",
-            "WARNING:transformers_modules.jinaai.xlm-roberta-flash-implementation.2b6bc3f30750b3a9648fe9b63448c09920efe9be.modeling_xlm_roberta:flash_attn is not installed. Using PyTorch native attention implementation.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
