--- a/system_engineering_v15.ipynb
+++ b/system_engineering_v15.ipynb
@@ -1734,10 +1734,10 @@
       ],
       "metadata": {
         "id": "ACv14X5D_hgl",
-        "outputId": "9277f9aa-d3fb-4deb-e94a-3647f13e0462",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7e828bb4-2405-4823-c230-d2f47aa22cd7"
       },
       "execution_count": null,
       "outputs": [
@@ -1745,10 +1745,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mesajınızı Giriniz: magazin habeleri nelerdir\n",
+            "Mesajınızı Giriniz: yemek tarifi verir misin\n",
             "Girdiğiniz soru sistem mühendisliği alanı ile ilgili değildir. Lütfen sistem mühendisliği ile ilgili bir soru sorunuz.\n",
             "\n",
-            "Mesajınızı Giriniz: galatasaray hakkında bilgi verir misin\n",
+            "Mesajınızı Giriniz: recep tayyip bu sene kazanır mı seçimi\n",
             "[DEBUG] Konu uygunluk LLM yanıtı:\n",
             "---\n",
             "Düşünce: **Sonuç:** HAYIR\n",
@@ -1757,7 +1757,7 @@
             "---\n",
             "Girdiğiniz soru sistem mühendisliği alanı ile ilgili değildir. Lütfen sistem mühendisliği ile ilgili bir soru sorunuz.\n",
             "\n",
-            "Mesajınızı Giriniz: yapay zeka nedir\n",
+            "Mesajınızı Giriniz: operasyonel senaryo nedir\n",
             "[DEBUG] Konu uygunluk LLM yanıtı:\n",
             "---\n",
             "Düşünce: **Sonuç:** EVET\n",
@@ -1768,7 +1768,9 @@
             "==================================================\n",
             "OPTİMİZE EDİLMİŞ PROMPT:\n",
             "==================================================\n",
-            "Yapay zeka, makine öğrenmesi algoritmaları aracılığıyla bilginin analiz edilerek kararlar veren bir disiplindir. Makinesiz bir şekilde problem çözücü yetkinlikleri olan sistemlerdir. Yapay zeka uygulamalarında genellikle büyük veri setleri kullanılarak train edilirler ve gerçek zamanlı olarak yeni gelişmeleri takip ederler.\n"
+            "### Operasyonel Senaryolar Neden Önemlidir?\n",
+            "\n",
+            "Operasyonel senaryolar, işletmelerin günlük operasyonlarını simüle ederek olası durumları analiz etmesini sağlar. Bu sayede işletme, riskleri önceden belirleyebilir, kriz durumlarında hızlı bir şekilde tepki verebilir ve verimli bir karar verme sürecini destekler. Ayrıca çalışanların eğitiminde de önemli bir rol oynar.\n"
           ]
         },
         {
