--- a/Ragas.ipynb
+++ b/Ragas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/Ragas.ipynb",
-      "authorship_tag": "ABX9TyNvDG72jX7tnO4Gu/LgMimC",
+      "authorship_tag": "ABX9TyO/xrqroNYHTnjMFd+NiP64",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -388,22 +388,10 @@
         "pip install langchain_openai ragas"
       ],
       "metadata": {
-        "id": "INgzXSgXhoFj",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d2afa5b2-14e3-4f4b-8731-41b6ddaa1e0f"
+        "id": "INgzXSgXhoFj"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: mypy-extensions>=0.3.0 in /usr/local/lib/python3.11/dist-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain-community->ragas) (1.1.0)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -576,7 +564,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,7 +603,7 @@
       "metadata": {
         "id": "ZD9OXa-Ufa6y"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -693,7 +681,7 @@
           "height": 216
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -707,6 +695,116 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Sample by Sample Examination"
+      ],
+      "metadata": {
+        "id": "kh-GVsZS0zU1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import pandas as pd\n",
+        "from langchain_openai import ChatOpenAI\n",
+        "from langchain_openai import OpenAIEmbeddings\n",
+        "from ragas import evaluate, EvaluationDataset\n",
+        "from ragas.llms import LangchainLLMWrapper\n",
+        "from ragas.metrics import (\n",
+        "    AnswerRelevancy,\n",
+        "    Faithfulness,\n",
+        "    FactualCorrectness,\n",
+        "    AnswerCorrectness\n",
+        ")\n",
+        "\n",
+        "# === 1. OpenAI anahtarı ===\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"sk--\"  # kendi anahtarını yaz\n",
+        "\n",
+        "# === 2. Excel dosyasını oku ===\n",
+        "df = pd.read_excel(\"/content/Veri Karşılaştırma_test.xlsx\", sheet_name=\"Chatgpt\")\n",
+        "\n",
+        "# === 3. Değerlendirici modeller ===\n",
+        "llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)\n",
+        "evaluator_llm = LangchainLLMWrapper(llm)\n",
+        "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n",
+        "\n",
+        "# === 4. Model sütunları ===\n",
+        "model_columns = {\n",
+        "    \"deepseek-r1\": \"Deepseek-r1 (System chatbot)\",\n",
+        "    \"llama-3.1\": \"Llama 3.1 8b (System Chatbot)\",\n",
+        "    \"claude-3.7\": \"Claude Cevap\"\n",
+        "}\n",
+        "\n",
+        "# === 5. Her modelin skorlarını hesapla ===\n",
+        "all_results = []\n",
+        "\n",
+        "for model_name, col_name in model_columns.items():\n",
+        "    print(f\"\\n--- {model_name} modeli değerlendiriliyor ---\")\n",
+        "\n",
+        "    dataset_list = []\n",
+        "    for i, row in df.iterrows():\n",
+        "        dataset_list.append({\n",
+        "            \"user_input\": str(row[\"Soru\"]),\n",
+        "            \"retrieved_contexts\": [],  # RAG bağlamı yok\n",
+        "            \"response\": str(row[col_name]),\n",
+        "            \"reference\": str(row[\"Cevap-Chatgpt-o1\"])\n",
+        "        })\n",
+        "\n",
+        "    evaluation_dataset = EvaluationDataset.from_list(dataset_list)\n",
+        "\n",
+        "    result = evaluate(\n",
+        "        dataset=evaluation_dataset,\n",
+        "        metrics=[\n",
+        "            AnswerRelevancy(),\n",
+        "            Faithfulness(),\n",
+        "            FactualCorrectness(),\n",
+        "            AnswerCorrectness()\n",
+        "        ],\n",
+        "        llm=evaluator_llm,\n",
+        "        embeddings=embeddings\n",
+        "    )\n",
+        "\n",
+        "    # örnek bazlı skorları yakala\n",
+        "    if hasattr(result, \"scores\"):\n",
+        "        df_scores = pd.DataFrame(result.scores)\n",
+        "    elif hasattr(result, \"to_pandas\"):\n",
+        "        df_scores = result.to_pandas()\n",
+        "    elif isinstance(result, dict) and \"results\" in result:\n",
+        "        df_scores = pd.DataFrame(result[\"results\"])\n",
+        "    else:\n",
+        "        raise ValueError(\"Skor verisi bulunamadı\")\n",
+        "\n",
+        "    df_scores[\"model\"] = model_name\n",
+        "    df_scores[\"dataset\"] = \"chatgpt\"\n",
+        "    df_scores[\"sample_id\"] = df[\"Soru No\"]\n",
+        "\n",
+        "    all_results.append(df_scores)\n",
+        "\n",
+        "# === 6. Tek dosya olarak kaydet ===\n",
+        "final_df = pd.concat(all_results, ignore_index=True)\n",
+        "final_df.rename(columns={\n",
+        "    \"answer_relevancy\": \"AnswerRelevancy\",\n",
+        "    \"faithfulness\": \"Faithfulness\",\n",
+        "    \"factual_correctness\": \"FactualCorrectness\",\n",
+        "    \"answer_correctness\": \"AnswerCorrectness\"\n",
+        "}, inplace=True)\n",
+        "\n",
+        "output_path = \"/content/ragas_per_sample_chatgpt.xlsx\"\n",
+        "final_df.to_excel(output_path, index=False)\n",
+        "print(f\"\\n✅ Kaydedildi: {output_path}\")\n",
+        "\n",
+        "from google.colab import files\n",
+        "files.download(output_path)\n"
+      ],
+      "metadata": {
+        "id": "MTbzi0Hy02_L"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
