--- a/Ragas.ipynb
+++ b/Ragas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/Ragas.ipynb",
-      "authorship_tag": "ABX9TyOsNsJfK/RPGbYvnm8mHhXH",
+      "authorship_tag": "ABX9TyMHHGN1wOt2gnoedBorxc9Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1612,7 +1612,7 @@
         "id": "pVpCO3obaqHQ",
         "outputId": "907dc33c-57bf-46b3-dabb-2f37d254d274"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2065,7 +2065,7 @@
         "id": "FTKJvH6oe7dM",
         "outputId": "4f23f4fc-ebe1-4a77-aad4-cb0398d5a5b5"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2655,7 +2655,7 @@
         "id": "z0Hz6fOLjKMI",
         "outputId": "0cfcddcf-734e-4a24-e88a-f2da69f8b780"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3147,6 +3147,179 @@
           "execution_count": 14
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install scikit-posthocs"
+      ],
+      "metadata": {
+        "id": "UVkboE026rjk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from scipy.stats import wilcoxon, friedmanchisquare\n",
+        "import scikit_posthocs as sp\n",
+        "from google.colab import files\n",
+        "\n",
+        "# === 1️⃣ Excel dosyalarını oku ===\n",
+        "chatgpt_df = pd.read_excel(\"/content/ragas_per_sample_chatgpt.xlsx\")\n",
+        "gemini_df = pd.read_excel(\"/content/ragas_per_sample_gemini.xlsx\")\n",
+        "\n",
+        "# === 2️⃣ Birleştir ===\n",
+        "df = pd.concat([chatgpt_df, gemini_df], ignore_index=True)\n",
+        "print(\"✅ Veri setleri birleştirildi:\", df.shape)\n",
+        "\n",
+        "# === 3️⃣ Kolon isimlerini normalize et ===\n",
+        "df.rename(columns={\n",
+        "    \"answer_relevancy\": \"AnswerRelevancy\",\n",
+        "    \"faithfulness\": \"Faithfulness\",\n",
+        "    \"factual_correctness(mode=f1)\": \"FactualCorrectness\",\n",
+        "    \"factual_correctness\": \"FactualCorrectness\",\n",
+        "    \"answer_correctness\": \"AnswerCorrectness\"\n",
+        "}, inplace=True)\n",
+        "\n",
+        "# === 4️⃣ Wilcoxon testi ===\n",
+        "def wilcoxon_compare(df, dataset, metric, model_a, model_b):\n",
+        "    sub = df[df[\"dataset\"] == dataset]\n",
+        "    a = sub[sub[\"model\"] == model_a][metric].astype(float).reset_index(drop=True)\n",
+        "    b = sub[sub[\"model\"] == model_b][metric].astype(float).reset_index(drop=True)\n",
+        "    n = min(len(a), len(b))\n",
+        "    if n < 2:\n",
+        "        return (np.nan, np.nan, n)\n",
+        "    stat, p = wilcoxon(a[:n], b[:n])\n",
+        "    return (stat, p, n)\n",
+        "\n",
+        "# === 5️⃣ Parametreler ===\n",
+        "model_pairs = [\n",
+        "    (\"llama-3.1\", \"deepseek-r1\"),\n",
+        "    (\"claude-3.7\", \"llama-3.1\"),\n",
+        "    (\"claude-3.7\", \"deepseek-r1\")\n",
+        "]\n",
+        "metrics = [\"AnswerRelevancy\", \"Faithfulness\", \"FactualCorrectness\", \"AnswerCorrectness\"]\n",
+        "datasets = [\"chatgpt\", \"gemini\"]\n",
+        "\n",
+        "# === 6️⃣ Wilcoxon + Bonferroni ===\n",
+        "wilcoxon_rows = []\n",
+        "for ds in datasets:\n",
+        "    for met in metrics:\n",
+        "        for (mA, mB) in model_pairs:\n",
+        "            try:\n",
+        "                stat, p, n = wilcoxon_compare(df, ds, met, mA, mB)\n",
+        "\n",
+        "                # Bonferroni düzeltmesi (3 karşılaştırma)\n",
+        "                p_bonf = min(p * len(model_pairs), 1.0)\n",
+        "                alpha_bonf = 0.05 / len(model_pairs)\n",
+        "\n",
+        "                sig_raw = \"✅ anlamlı\" if p < 0.05 else \"❌ anlamsız\"\n",
+        "                sig_bonf = \"✅ anlamlı (Bonferroni)\" if p_bonf < alpha_bonf else \"❌ anlamsız (Bonferroni)\"\n",
+        "\n",
+        "                wilcoxon_rows.append({\n",
+        "                    \"dataset\": ds,\n",
+        "                    \"metric\": met,\n",
+        "                    \"model_A\": mA,\n",
+        "                    \"model_B\": mB,\n",
+        "                    \"W\": stat,\n",
+        "                    \"p_raw\": round(p, 6),\n",
+        "                    \"p_bonferroni\": round(p_bonf, 6),\n",
+        "                    \"alpha_bonferroni\": round(alpha_bonf, 6),\n",
+        "                    \"n_pairs\": n,\n",
+        "                    \"result_raw\": sig_raw,\n",
+        "                    \"result_bonferroni\": sig_bonf\n",
+        "                })\n",
+        "            except Exception as e:\n",
+        "                wilcoxon_rows.append({\n",
+        "                    \"dataset\": ds,\n",
+        "                    \"metric\": met,\n",
+        "                    \"model_A\": mA,\n",
+        "                    \"model_B\": mB,\n",
+        "                    \"error\": str(e)\n",
+        "                })\n",
+        "\n",
+        "wilcoxon_results = pd.DataFrame(wilcoxon_rows)\n",
+        "wilcoxon_results.to_excel(\"/content/wilcoxon_bonferroni_results.xlsx\", index=False)\n",
+        "print(\"✅ Wilcoxon + Bonferroni sonuçları kaydedildi.\")\n",
+        "\n",
+        "# === 7️⃣ Friedman + Nemenyi Post-hoc ===\n",
+        "friedman_rows = []\n",
+        "nemenyi_rows = []\n",
+        "\n",
+        "for ds in datasets:\n",
+        "    for met in metrics:\n",
+        "        sub = df[df[\"dataset\"] == ds]\n",
+        "        deep = sub[sub[\"model\"] == \"deepseek-r1\"][met].astype(float).reset_index(drop=True)\n",
+        "        llama = sub[sub[\"model\"] == \"llama-3.1\"][met].astype(float).reset_index(drop=True)\n",
+        "        claude = sub[sub[\"model\"] == \"claude-3.7\"][met].astype(float).reset_index(drop=True)\n",
+        "\n",
+        "        n = min(len(deep), len(llama), len(claude))\n",
+        "        if n < 3:\n",
+        "            continue\n",
+        "\n",
+        "        # Friedman testi\n",
+        "        stat, p = friedmanchisquare(deep[:n], llama[:n], claude[:n])\n",
+        "        sig = \"✅ anlamlı\" if p < 0.05 else \"❌ anlamsız\"\n",
+        "\n",
+        "        friedman_rows.append({\n",
+        "            \"dataset\": ds,\n",
+        "            \"metric\": met,\n",
+        "            \"friedman_chi2\": round(stat, 4),\n",
+        "            \"p_value\": round(p, 6),\n",
+        "            \"n_samples\": n,\n",
+        "            \"result\": sig\n",
+        "        })\n",
+        "\n",
+        "        # Post-hoc Nemenyi testi (eğer anlamlıysa)\n",
+        "        if p < 0.05:\n",
+        "            temp = pd.DataFrame({\n",
+        "                \"DeepSeek-R1\": deep[:n],\n",
+        "                \"LLaMA-3.1\": llama[:n],\n",
+        "                \"Claude-3.7\": claude[:n]\n",
+        "            })\n",
+        "            nemenyi = sp.posthoc_nemenyi_friedman(temp)\n",
+        "            nemenyi = nemenyi.reset_index().rename(columns={'index': 'Model_A'})\n",
+        "            nemenyi[\"dataset\"] = ds\n",
+        "            nemenyi[\"metric\"] = met\n",
+        "            nemenyi_rows.append(nemenyi)\n",
+        "\n",
+        "friedman_results = pd.DataFrame(friedman_rows)\n",
+        "friedman_results.to_excel(\"/content/friedman_results.xlsx\", index=False)\n",
+        "\n",
+        "if nemenyi_rows:\n",
+        "    nemenyi_results = pd.concat(nemenyi_rows, ignore_index=True)\n",
+        "    nemenyi_results.to_excel(\"/content/nemenyi_posthoc_results.xlsx\", index=False)\n",
+        "    print(\"✅ Friedman + Nemenyi post-hoc sonuçları kaydedildi: nemenyi_posthoc_results.xlsx\")\n",
+        "else:\n",
+        "    print(\"⚠️ Hiçbir Friedman testi anlamlı çıkmadı, post-hoc yapılmadı.\")\n",
+        "    nemenyi_results = pd.DataFrame()\n",
+        "\n",
+        "# === 8️⃣ Dosyaları indir ===\n",
+        "files.download(\"/content/wilcoxon_bonferroni_results.xlsx\")\n",
+        "files.download(\"/content/friedman_results.xlsx\")\n",
+        "if not nemenyi_results.empty:\n",
+        "    files.download(\"/content/nemenyi_posthoc_results.xlsx\")\n",
+        "\n",
+        "# === 9️⃣ Ön izleme ===\n",
+        "print(\"\\n=== Wilcoxon + Bonferroni ===\")\n",
+        "display(wilcoxon_results.head(10))\n",
+        "\n",
+        "print(\"\\n=== Friedman ===\")\n",
+        "display(friedman_results.head(10))\n",
+        "\n",
+        "if not nemenyi_results.empty:\n",
+        "    print(\"\\n=== Nemenyi Post-hoc ===\")\n",
+        "    display(nemenyi_results.head(10))\n"
+      ],
+      "metadata": {
+        "id": "8TXJwnCI6sdq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
